Fix z-index issue

--- a/style/components/main-content.scss
+++ b/style/components/main-content.scss
@@ -31,7 +31,7 @@
     color: $darkgray-light;
     padding: 20px;
     border-radius: 8px;
-    z-index: 10000;
+    z-index: 999;
 
     h2 {
       font-size: 24px;
